# pytest-pickle-cache

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/pytest_pickle_cache/: plugin.py
tests/: test_plugin.py
