[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-pickle-cache"
version = "0.1.2"
description = "A pytest plugin for caching test results using pickle."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "daizutabi", email = "daizutabi@gmail.com" }]
classifiers = [
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = ["pytest>=7"]

[project.urls]
Documentation = "https://github.com/daizutabi/pytest-pickle-cache"
Source = "https://github.com/daizutabi/pytest-pickle-cache"
Issues = "https://github.com/daizutabi/pytest-pickle-cache/issues"

[project.entry-points.pytest11]
pickle_cache = "pytest_pickle_cache.plugin"

[dependency-groups]
dev = ["pandas>=2", "pytest-cov>=6.0"]

[tool.pytest.ini_options]
addopts = ["--cov=pytest_pickle_cache", "--cov-report=lcov:lcov.info"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
skip_covered = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
unfixable = ["F401"]
